@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.cellar.samples</groupId>
         <artifactId>dosgi-greeter</artifactId>
-        <version>3.0.2-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
