@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.karaf.cellar</groupId>
         <artifactId>samples</artifactId>
-        <version>3.0.2-SNAPSHOT</version>
+        <version>4.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
