@@ -15,6 +15,17 @@
  * limitations under the License.
  */
 
+                    Apache Karaf Cellar 4.0.0
+                    =========================
+
+  Overview
+  --------
+
+ Apache Karaf Cellar 4.0.0 is a major new release of Cellar designed to work with Karaf 4.0.x versions.
+
+  Changelog
+  ---------
+
                     Apache Karaf Cellar 3.0.1
                     =========================
 
